test/corpus/for.txt
======
for-do
======

for x do y

---

(source_file
  (statement
    (expression
      (for
        (identifier)
        (expression
          (token
            (identifier)))))))

========
for-list
========

for x list y

---

(source_file
  (statement
    (expression
      (for
        (identifier)
        (expression
          (token
            (identifier)))))))

===========
for-list-do
===========

for x list y do z

---

(source_file
  (statement
    (expression
      (for
        (identifier)
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===========
for-when-do
===========

for x when y do z

---

(source_file
  (statement
    (expression
      (for
        (identifier)
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=============
for-when-list
=============

for x when y list z

---

(source_file
  (statement
    (expression
      (for
        (identifier)
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

================
for-when-list-do
================

for x when y list z do w

---

(source_file
  (statement
    (expression
      (for
        (identifier)
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))
