test/corpus/if.txt
=======
if-then
=======

if x then y

---

(source_file
  (statement
    (expression
      (if
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

============
if-then-else
============

if x then y else z

---

(source_file
  (statement
    (expression
      (if
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=============
dangling else
=============

if x then if y then z else w

---

(source_file
  (statement
    (expression
      (if
        (expression
          (token
            (identifier)))
        (expression
          (if
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))))))))
