test/corpus/new.txt
===
new
===

new x

---

(source_file
  (statement
    (expression
      (new
        (expression
          (token
            (identifier)))))))

======
new-of
======

new x of y

---

(source_file
  (statement
    (expression
      (new
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

========
new-from
========

new x from y

---

(source_file
  (statement
    (expression
      (new
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===========
new-of-from
===========

new x of y from z

---

(source_file
  (statement
    (expression
      (new
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))
