test/corpus/try.txt
===
try
===

try x

---

(source_file
  (statement
    (expression
      (try
        (expression
          (token
            (identifier)))))))

========
try-then
========

try x then y

---

(source_file
  (statement
    (expression
      (try
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=============
try-then-else
=============

try x then y else z

---

(source_file
  (statement
    (expression
      (try
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

======
try-do
======

try x except y do z

---

(source_file
  (statement
    (expression
      (try
        (expression
          (token
            (identifier)))
        (identifier)
        (expression
          (token
            (identifier)))))))

===========
try-then-do
===========

try x then y except z do w

---

(source_file
  (statement
    (expression
      (try
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))
        (identifier)
        (expression
          (token
            (identifier)))))))

====================
try w/ try-then-else
====================

try try x then y else z

---

(source_file
  (statement
    (expression
      (try
        (expression
          (try
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))))))))

========================
if-then w/ try-then-else
========================

if try x then y else z then y

---

(source_file
  (statement
    (expression
      (if
        (expression
          (try
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))))
        (expression
          (token
            (identifier)))))))

===============
try w/ try-else
===============

try try x else y

---

(source_file
  (statement
    (expression
      (try
        (expression
          (try
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))))))))

=============
try w/ try-do
=============

try try x except y do z

---

(source_file
  (statement
    (expression
      (try
        (expression
          (try
            (expression
              (token
                (identifier)))
            (identifier)
            (expression
              (token
                (identifier)))))))))

===================
try w/ if-then-else
===================

try if x then y else z

---

(source_file
  (statement
    (expression
      (try
        (expression
          (if
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))))))))

====================
try w/ try-then-else
====================

try try x then y else z

---

(source_file
  (statement
    (expression
      (try
        (expression
          (try
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))))))))
